--- a/app/src/main/res/drawable/gradient_foreground_green.xml
+++ b/app/src/main/res/drawable/gradient_foreground_green.xml
@@ -1,7 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners android:radius="15dp" />
+    <size
+        android:width="300dp"
+        android:height="300dp" />
+
     <gradient android:type="radial"
-        android:gradientRadius="230dp"
+        android:gradientRadius="220dp"
         android:startColor="#40000000"
         android:centerColor="#40000000"
         android:endColor="#429D7A"
