--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -13,47 +13,164 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        tools:background="@drawable/background_dark"
         tools:context=".ui.auth.AuthFragment">
 
-        <EditText
-            android:id="@+id/loginTxt"
-            android:layout_width="wrap_content"
+        <com.google.android.material.progressindicator.LinearProgressIndicator
+            android:id="@+id/lpi"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="88dp"
-            android:ems="10"
-            android:hint="@string/login"
-            android:text="@={viewModel.loginField}"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
+            android:indeterminate="true"
+            app:indicatorColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/passwordTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:ems="10"
-            android:hint="@string/password"
-            android:text="@={viewModel.passwordField}"
-            android:inputType="textPassword"
-            android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="@+id/loginTxt"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/loginTxt"
-            app:layout_constraintTop_toBottomOf="@+id/loginTxt" />
+        <View
+            android:id="@+id/view"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+
+        <androidx.appcompat.widget.AppCompatEditText
+            app:layout_constraintTop_toBottomOf="@+id/TvAuthTitle"
+            android:id="@+id/etEmail"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginEnd="44dp"
+            android:layout_marginBottom="26dp"
+            android:background="@drawable/et_auth_bg"
+            android:drawableStart="@drawable/ic_person"
+            android:drawablePadding="10dp"
+            android:drawableTint="#5D5C5F"
+            android:hint="@string/email"
+            android:inputType="textPersonName"
+            android:paddingStart="12dp"
+            android:paddingEnd="10dp"
+            android:shadowColor="@color/white"
+            android:singleLine="true"
+            android:text="@={viewModel.loginField}"
+            android:textColor="@color/white"
+            android:textColorHighlight="@color/white"
+            android:textColorHint="#5D5C5F"
+
+            app:layout_constraintBottom_toTopOf="@+id/etPassword"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:startIconTint="@color/white" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            app:layout_constraintTop_toBottomOf="@+id/etEmail"
+            android:id="@+id/etPassword"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginEnd="44dp"
+            android:layout_marginBottom="25dp"
+            android:background="@drawable/et_auth_bg"
+            android:drawableStart="@drawable/ic_lock_closed"
+            android:drawablePadding="10dp"
+            android:drawableTint="#5D5C5F"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:paddingStart="12dp"
+            android:paddingEnd="10dp"
+            android:shadowColor="@color/white"
+            android:singleLine="true"
+            android:text="@={viewModel.passwordField}"
+            android:textColor="@color/white"
+            android:textColorHint="#5D5C5F"
+            app:layout_constraintBottom_toTopOf="@+id/loginBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/loginBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/etPassword"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="44dp"
+            android:layout_marginEnd="44dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/auth_btn"
+            android:elevation="4dp"
             android:onClick="@{() -> viewModel.onClickLogin()}"
             android:text="@string/log_in"
-            app:layout_constraintEnd_toEndOf="@+id/passwordTxt"
-            app:layout_constraintStart_toStartOf="@+id/passwordTxt"
-            app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/TvAuthTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+
+        <TextView
+            android:layout_marginTop="166dp"
+            android:id="@+id/TvAuthTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="37dp"
+            android:text="@string/auth_title"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/etEmail"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:id="@+id/tvForgotPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="17dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:gravity="top"
+            android:text="@string/forgot_pass"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
+
+        <TextView
+            android:id="@+id/TvNotRegister"
+            android:layout_width="wrap_content"
+            android:layout_height="17dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:gravity="top"
+            android:text="@string/not_register_yet"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@+id/TvRegister"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/TvRegister"
+            android:layout_marginBottom="42dp"
+            android:layout_width="wrap_content"
+            android:layout_height="17dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:gravity="top"
+            android:text="@string/register"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
