--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,30 +40,15 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
 
-            <View
-                android:id="@+id/btBack"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="28dp"
-                android:layout_marginEnd="13dp"
-                android:layout_marginBottom="12dp"
-                android:background="@drawable/tb_btn"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <ImageView
                 android:id="@+id/btBackImg"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginStart="22dp"
                 android:layout_marginTop="28dp"
                 android:layout_marginBottom="12dp"
                 android:src="@drawable/ic_arrow_left"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/btBack"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -79,39 +64,35 @@
                 android:lines="1"
                 android:textColor="@color/white"
                 android:textSize="18sp"
+                android:fontFeatureSettings="smcp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="0"
-                app:layout_constraintEnd_toStartOf="@id/btMenu"
-                app:layout_constraintStart_toEndOf="@id/btBack"
+                app:layout_constraintEnd_toStartOf="@id/btMenuImg"
+                app:layout_constraintStart_toEndOf="@id/btBackImg"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="" />
 
             <ImageView
-                android:id="@+id/btMenu"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="13dp"
-                android:layout_marginTop="28dp"
-                android:layout_marginEnd="22dp"
-                android:layout_marginBottom="12dp"
-                android:background="@drawable/tb_btn"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
                 android:id="@+id/btMenuImg"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginTop="28dp"
                 android:layout_marginEnd="22dp"
                 android:layout_marginBottom="12dp"
                 android:src="@drawable/ic_hamburger_menu"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/btMenu"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="4dp"
+                android:background="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
