--- a/app/src/main/res/layout/fragment_servers_list.xml
+++ b/app/src/main/res/layout/fragment_servers_list.xml
@@ -20,20 +20,19 @@
             android:id="@+id/NoActualIndicator"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             android:background="@color/server_status_offline_color"
-            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:fontFeatureSettings="smcp"
                 android:gravity="center"
                 android:text="Данные не актуальны"
-                android:fontFeatureSettings="smcp"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -42,12 +41,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
             android:fontFeatureSettings="smcp"
-            android:textStyle="bold"
+            android:text="@string/choose_the_server"
             android:textColor="#4E5D62"
+            android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/NoActualIndicator"
-            android:text="@string/choose_the_server" />
+            app:layout_constraintTop_toBottomOf="@+id/NoActualIndicator" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv"
